--- a/backend/src/main/resources/static/css/main.css
+++ b/backend/src/main/resources/static/css/main.css
@@ -2,8 +2,20 @@ html, body {
     height: 100%;
 }
 
+body {
+    margin: 0;
+}
+
 #background {
     background: #f6f8fb;
     min-height: 100dvh;
-    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+#main {
+    flex: 1 0 auto;
+    display: flex;
+    flex-direction: column;
+    min-height: 0;
 }
