--- a/backend/src/main/resources/templates/layout.html
+++ b/backend/src/main/resources/templates/layout.html
@@ -9,6 +9,8 @@
     <!-- 기본 타이틀 패턴 -->
     <title layout:title-pattern="$CONTENT_TITLE - BoardCraft">BoardCraft</title>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <!-- 공통 CSS -->
     <link rel="stylesheet" th:href="@{/css/reset.css}">
     <link rel="stylesheet" th:href="@{/css/main.css}">
